--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,16 +13,12 @@ spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 60000
 
 server.port=8080
-server.context-path=/test-jms
-server.servletPath=/*
-
-
 
 #============================================================================
 # Data Source Development
 #============================================================================
-db.host=localhost
+db.host=dsjms-postgre
 db.port=5432
-db.schema=test-jms
+db.schema=dsjms_db
 db.username=postgres
 db.password=pgadmin
